[gd_scene load_steps=6 format=3 uid="uid://bh43ih5fx6qh7"]

[ext_resource type="FontFile" uid="uid://cb1upqnk6arqn" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_3nsoo"]
[ext_resource type="Script" uid="uid://bxt7hbf2lhtsg" path="res://scripts/UI/EnemyInfo.gd" id="1_jxkto"]
[ext_resource type="Texture2D" uid="uid://jxhbfycbjeup" path="res://assets/UI/enemybar.png" id="2_jxkto"]
[ext_resource type="Texture2D" uid="uid://cmvtd67xlrqek" path="res://assets/UI/enemyhp.png" id="3_g7vxu"]

[sub_resource type="LabelSettings" id="LabelSettings_870gy"]
font = ExtResource("1_3nsoo")
font_size = 18
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="EnemyInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxkto")

[node name="EnemyName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_top = 10.0
offset_right = 87.5
offset_bottom = 33.0
grow_horizontal = 2
text = "Enemy Name"
label_settings = SubResource("LabelSettings_870gy")

[node name="EnemyHP" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = 18.0
offset_right = 187.0
offset_bottom = 76.0
grow_horizontal = 2
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("2_jxkto")
texture_progress = ExtResource("3_g7vxu")
